Software/logging/testLogging.txt
  File "/home/rpommes/1Zentrum/Uni/24SoSe/Bachelorarbeit/1Project/Software/created_scripts/test-script-fixed.py", line 12
    expected_sine2 = np.array([np.sin(np.deg2rad(150)), np.sin(np.deg2rad(120)), np.sin(np.deg2rad(90)), np.sin(np.deg2rad(60)])
                                                                                                                              ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
